--- a/README
+++ b/README
@@ -6,3 +6,4 @@ version 5: ROOT integration, no outputs TH1F and TTree - 5/16/2013
 version 6: Corrected material for Zr sample and fixed dimensions, removed old macros/gui - 5/29/2013
 version 7: Switched from GPS to particle gun.  Updated messenger to shoot multiple gammas - 5/30/2013
 version 8: added angular dependence of gammas
+cersion 9: commented code and fixed spacing - 10/31/2013
